# toxic-scanner

./: .dockerignore  .gitignore  BACKLOG.md  Dockerfile  LICENSE  PLAN.md  README.md  pyproject.toml  pyrightconfig.json
.claude/: settings.json
.github/workflows/: deploy.yml
.zed/: settings.json
app/: companies.py  evidence.py  financial_health.py  jobs.py  main.py  models.py  ratelimit.py  scoring.py  telemetry.py
app/sources/: base.py  crbr.py  financials.py  krs.py  vacancies.py  vat_whitelist.py  web_search.py
app/static/: app.js  index.html  styles.css
