[project]
name = "toxic-scanner"
version = "0.8.0"
description = "Due-diligence for Polish companies — grounded in official registries, explained by an LLM."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.6",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.7",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tavily-python>=0.7.26",
    "uvicorn>=0.49.0",
]
